fix(intro): style

--- a/intro.html
+++ b/intro.html
@@ -104,7 +104,7 @@
                             <div><img class="size-10 rounded-box"
                                     src="https://avatars.githubusercontent.com/u/91409566?s=96&v=4" /></div>
                             <div class="list-col-grow">
-                                <div class="text-xs uppercase font-semibold opacity-60">Эльвира Гизатулина</div>
+                                <div>Эльвира Гизатулина</div>
                                 <div><a href="https://t.me/Harper567">@Harper567</a></div>
                             </div>
                         </li>
@@ -114,7 +114,7 @@
                                     src="https://raw.githubusercontent.com/GoshaSerbin/tex-style/refs/heads/main/24-06-18_STorunov_257-2.jpg" />
                             </div>
                             <div class="list-col-grow">
-                                <div class="text-xs uppercase font-semibold opacity-60">Георгий Сербин</div>
+                                <div>Георгий Сербин</div>
                                 <div><a href="https://t.me/GoshaSerbin">@GoshaSerbin</a></div>
                             </div>
                         </li>
