fix(intro): link

--- a/intro.html
+++ b/intro.html
@@ -318,7 +318,7 @@
                                 </li>
                             </ul>
                             <div class="mt-6">
-                                <button class="btn btn-primary btn-block" onclick="window.open('https://github.https://github.com/ckorikov/2025-spring-efficient-ai', '_blank')">Начать</button>
+                                <button class="btn btn-primary btn-block" onclick="window.open('https://github.com/ckorikov/2025-spring-efficient-ai', '_blank')">Начать</button>
                             </div>
                         </div>
                     </div>
