fix(intro): typo n->m

--- a/intro.html
+++ b/intro.html
@@ -387,7 +387,7 @@
                 <p class="mt-2 font-bold" style="color: var(--red-color);">Какая сложность лучшего алгоритма, который может найти пересечение двух отсортированных списков длин $n$ и $m$?</p>
                 <ol>
                     <li>$O(n^2)$</li>
-                    <li>$O(n \log(n))$</li>
+                    <li>$O(n \log(m))$</li>
                     <li>$O(n+m)$</li>
                     <li>$O(n m)$</li>
                 </ol>
