refact(intro): reduce number of remote files

--- a/intro.html
+++ b/intro.html
@@ -11,15 +11,13 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/daisyui@5" type="text/css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/reveal.js/5.1.0/reveal.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/reveal.js/5.1.0/theme/white.css" id="theme">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/reveal.js/5.1.0/plugin/highlight/monokai.css" id="theme">
-
+    <link rel="stylesheet" href="sys/daisyui@5.css" type="text/css" />
+    <link rel="stylesheet" href="sys/reveal.min.css">
+    <link rel="stylesheet" href="sys/white.css" id="theme">
+    <link rel="stylesheet" href="sys/monokai.css" id="theme">
+    <link rel="stylesheet" href="sys/IBM+Plex+Mono.css" id="theme">
 
     <style>
-        @import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,300;0,700;1,300;1,700&display=swap');
-
         .daisy img {
             max-width: 100%;
             max-height: 100%;
@@ -66,8 +64,7 @@
                 <div class="flex items-center justify-center space-x-3" style="margin-top: 50px;">
                     <div class="daisy avatar">
                         <div class="w-5 rounded-full">
-                            <a href="https://www.linkedin.com/in/ckorikov/"><img
-                                    src="https://avatars.githubusercontent.com/u/10579090?v=4" /></a>
+                            <a href="https://www.linkedin.com/in/ckorikov/"><img src="assets/ck.jpeg" /></a>
                         </div>
                     </div>
 
@@ -94,7 +91,7 @@
                     <ul class="list bg-base-100 rounded-box shadow-md">
                         <li class="list-row">
                             <div><img class="size-10 rounded-box"
-                                    src="https://avatars.githubusercontent.com/u/10579090?v=4" /></div>
+                                    src="assets/ck.jpeg" /></div>
                             <div class="list-col-grow">
                                 <div>Константин Кориков</div>
                                 <div><a href="https://t.me/ckorikov">@ckorikov</a></div>
@@ -103,7 +100,7 @@
 
                         <li class="list-row">
                             <div><img class="size-10 rounded-box"
-                                    src="https://avatars.githubusercontent.com/u/91409566?s=96&v=4" /></div>
+                                    src="assets/eg.jpeg" /></div>
                             <div class="list-col-grow">
                                 <div>Эльвира Гизатулина</div>
                                 <div><a href="https://t.me/Harper567">@Harper567</a></div>
@@ -112,7 +109,7 @@
 
                         <li class="list-row">
                             <div><img class="size-10 rounded-box"
-                                    src="https://raw.githubusercontent.com/GoshaSerbin/tex-style/refs/heads/main/24-06-18_STorunov_257-2.jpg" />
+                                    src="assets/gs.jpg" />
                             </div>
                             <div class="list-col-grow">
                                 <div>Георгий Сербин</div>
@@ -435,13 +432,13 @@
 
     </div>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/reveal.js/4.1.0/reveal.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/reveal.js/4.1.0/plugin/math/math.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/reveal.js/4.1.0/plugin/markdown/markdown.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/reveal.js/4.1.0/plugin/highlight/highlight.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/reveal.js/4.1.0/plugin/search/search.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/reveal.js/4.1.0/plugin/zoom/zoom.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+    <script src="sys/reveal.js"></script>
+    <script src="sys/plugin/math.js"></script>
+    <script src="sys/plugin/markdown.js"></script>
+    <script src="sys/plugin/highlight.js"></script>
+    <script src="sys/plugin/search.js"></script>
+    <script src="sys/plugin/zoom.js"></script>
+    <script src="sys/browser@4.js"></script>
     <script>
         Reveal.initialize({
             history: true,
