--- a/intro.html
+++ b/intro.html
@@ -90,8 +90,7 @@
                 <div class="daisy">
                     <ul class="list bg-base-100 rounded-box shadow-md">
                         <li class="list-row">
-                            <div><img class="size-10 rounded-box"
-                                    src="assets/ck.jpeg" /></div>
+                            <div><img class="size-10 rounded-box" src="assets/ck.jpeg" /></div>
                             <div class="list-col-grow">
                                 <div>Константин Кориков</div>
                                 <div><a href="https://t.me/ckorikov">@ckorikov</a></div>
@@ -99,8 +98,7 @@
                         </li>
 
                         <li class="list-row">
-                            <div><img class="size-10 rounded-box"
-                                    src="assets/eg.jpeg" /></div>
+                            <div><img class="size-10 rounded-box" src="assets/eg.jpeg" /></div>
                             <div class="list-col-grow">
                                 <div>Эльвира Гизатулина</div>
                                 <div><a href="https://t.me/Harper567">@Harper567</a></div>
@@ -108,8 +106,7 @@
                         </li>
 
                         <li class="list-row">
-                            <div><img class="size-10 rounded-box"
-                                    src="assets/gs.jpg" />
+                            <div><img class="size-10 rounded-box" src="assets/gs.jpg" />
                             </div>
                             <div class="list-col-grow">
                                 <div>Георгий Сербин</div>
@@ -316,7 +313,8 @@
                                 </li>
                             </ul>
                             <div class="mt-6">
-                                <button class="btn btn-primary btn-block" onclick="window.open('https://github.com/ckorikov/2025-spring-efficient-ai', '_blank')">Начать</button>
+                                <button class="btn btn-primary btn-block"
+                                    onclick="window.open('https://github.com/ckorikov/2025-spring-efficient-ai', '_blank')">Начать</button>
                             </div>
                         </div>
                     </div>
@@ -333,7 +331,8 @@
 
             <section class="text-xl">
                 <h5 class="font-bold mb-0">Вопрос №1</h5>
-                <p class="mt-2 font-bold" style="color: var(--red-color);">В вычислительной системе шина адреса состоит из 32 проводов. Какой максимальный объём памяти может быть адресован в данной системе?</p>
+                <p class="mt-2 font-bold" style="color: var(--red-color);">В вычислительной системе шина адреса состоит
+                    из 32 проводов. Какой максимальный объём памяти может быть адресован в данной системе?</p>
                 <ol>
                     <li>2 Гб</li>
                     <li>4 Гб</li>
@@ -344,7 +343,8 @@
 
             <section class="text-xl">
                 <h5 class="font-bold mb-0">Вопрос №2</h5>
-                <p class="mt-2 font-bold" style="color: var(--red-color);">Для чего используется TLB в архитектурах процессоров?</p>
+                <p class="mt-2 font-bold" style="color: var(--red-color);">Для чего используется TLB в архитектурах
+                    процессоров?</p>
                 <ol>
                     <li>Для управления питанием процессора</li>
                     <li>Для ускорения доступа к памяти</li>
@@ -355,7 +355,8 @@
 
             <section class="text-xl">
                 <h5 class="font-bold mb-0">Вопрос №3</h5>
-                <p class="mt-2 font-bold" style="color: var(--red-color);">Какую часть программы нужно распараллелить, чтобы получить ускорение в 90 раз на 100 процессорах?</p>
+                <p class="mt-2 font-bold" style="color: var(--red-color);">Какую часть программы нужно распараллелить,
+                    чтобы получить ускорение в 90 раз на 100 процессорах?</p>
                 <ol>
                     <li>$\approx99\%$ программы</li>
                     <li>$\approx90\%$ программы</li>
@@ -381,7 +382,8 @@
 
             <section class="text-xl">
                 <h5 class="font-bold mb-0">Вопрос №5</h5>
-                <p class="mt-2 font-bold" style="color: var(--red-color);">Какая сложность лучшего алгоритма, который может найти пересечение двух отсортированных списков длин $n$ и $m$?</p>
+                <p class="mt-2 font-bold" style="color: var(--red-color);">Какая сложность лучшего алгоритма, который
+                    может найти пересечение двух отсортированных списков длин $n$ и $m$?</p>
                 <ol>
                     <li>$O(n^2)$</li>
                     <li>$O(n \log(m))$</li>
@@ -392,7 +394,8 @@
 
             <section class="text-xl">
                 <h5 class="font-bold mb-0">Вопрос №6</h5>
-                <p class="mt-2 font-bold" style="color: var(--red-color);">Какая сложность матричного умножения матриц $A_{mn}$ и $B_{nk}$?</p>
+                <p class="mt-2 font-bold" style="color: var(--red-color);">Какая сложность матричного умножения матриц
+                    $A_{mn}$ и $B_{nk}$?</p>
                 <ol>
                     <li>$O(m+n+k)$</li>
                     <li>$O(mnk)$</li>
@@ -403,7 +406,8 @@
 
             <section class="text-xl">
                 <h5 class="font-bold mb-0">Вопрос №7</h5>
-                <p class="mt-2 font-bold" style="color: var(--red-color);">Какое преобразование выполняет двухслойный персептрон?</p>
+                <p class="mt-2 font-bold" style="color: var(--red-color);">Какое преобразование выполняет двухслойный
+                    персептрон?</p>
                 <ol>
                     <li>$y=f_2(W_2 f_1(W_1 x))$</li>
                     <li>$y=W_2 W_1 x$</li>
