refact(intro): format

--- a/intro.html
+++ b/intro.html
@@ -11,11 +11,11 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 
-    <link rel="stylesheet" href="sys/daisyui@5.css" type="text/css" />
+    <link rel="stylesheet" href="sys/daisyui@5.css">
     <link rel="stylesheet" href="sys/reveal.min.css">
-    <link rel="stylesheet" href="sys/white.css" id="theme">
-    <link rel="stylesheet" href="sys/monokai.css" id="theme">
-    <link rel="stylesheet" href="sys/IBM+Plex+Mono.css" id="theme">
+    <link rel="stylesheet" href="sys/white.css">
+    <link rel="stylesheet" href="sys/monokai.css">
+    <link rel="stylesheet" href="sys/IBM+Plex+Mono.css">
 
     <style>
         .daisy img {
