fix(intro): css

--- a/intro.html
+++ b/intro.html
@@ -124,10 +124,10 @@
                 <div class="daisy overflow-x-auto text-sm">
                     <ul class="steps">
                         <li class="step"><span class="step-icon">📍</span>Вводная</li>
-                        <li class="step step-secondary">
-                            <span style="margin-left: 100%; width: 100%;">Блок 1</span>
-                        </li>
                         <li class="step step-secondary"></li>
+                        <li class="step step-secondary">
+                            <span style="position: relative; left: -50%;">Блок 1</span>
+                        </li>
                         <li class="step step-accent"></li>
                         <li class="step step-accent">Блок 2</li>
                         <li class="step step-accent"></li>
