fix(matmul_1): use local file

--- a/matmul_1.html
+++ b/matmul_1.html
@@ -44,8 +44,7 @@
                 <div class="flex items-center justify-center space-x-3" style="margin-top: 50px;">
                     <div class="daisy avatar">
                         <div class="w-5 rounded-full">
-                            <a href="https://www.linkedin.com/in/ckorikov/"><img
-                                    src="https://avatars.githubusercontent.com/u/10579090?v=4" /></a>
+                            <a href="https://www.linkedin.com/in/ckorikov/"><img src="assets/ck.jpeg" /></a>
                         </div>
                     </div>
 
