feat(dl_2): added project requirements slide

--- a/dl_2.html
+++ b/dl_2.html
@@ -262,6 +262,19 @@
                 <h3>Практика</h3>
             </section>
 
+            <section class="text-xl">
+                <h3>Проект</h3>
+                <ul>
+                    <li>Сделать форк репозитория</li>
+                    <li>Добавить фичу (2 части: функциональный код + оптимизация)</li>
+                    <li>Убедиться в корректности работы</li>
+                    <li>Замерить скорость</li>
+                    <li>Сделать пул-реквест</li>
+                    <li>Альтернативно можно добавлять фичи другого типа (рефакторинг и т.д.)</li>
+                    <li>Пул-реквест лучше сделать заранее после написания функционального кода</li>
+                </ul>
+            </section>
+
             <section>
                 <div style="text-align: center; margin-top: 50px;">
                     <h6 class="text-sm">
