fix(dl_2): rename title + readme

--- a/dl_2.html
+++ b/dl_2.html
@@ -38,7 +38,7 @@
 
                     <h3 class="text-xl font-bold mb-0" style="margin-bottom: 0;">Efficient AI</h3>
                     <h5 class="text-sm text-gray-600 mt-0" style="margin-top: 0;">Блок 2. Нейронные сети.
-                        Inference Engine и проект</h5>
+                        Проект</h5>
                 </div>
 
                 <div class="flex items-center justify-center space-x-3" style="margin-top: 50px;">
