refact(mm_1): move files

--- a/matmul_1.html
+++ b/matmul_1.html
@@ -168,7 +168,7 @@ for i in range(n):
             <section class="text-xl">
                 <h5 class="font-bold mb-0">Трюки</h5>
                 <div class="flex justify-center">
-                    <img src="assets/matmul.png" class="mx-auto block">
+                    <img src="assets/lec_1/matmul.png" class="mx-auto block">
                 </div>
                 <div><a class="text-sm"
                         href="https://www.quantamagazine.org/new-breakthrough-brings-matrix-multiplication-closer-to-ideal-20240307/">New
@@ -245,7 +245,7 @@ for i in range(n):
             <section class="text-xl">
                 <h5 class="font-bold mb-0">Что нашли в DeepMind?</h5>
                 <div class="flex justify-center">
-                    <img src="assets/deepmind.png" class="w-1/2 mx-auto block">
+                    <img src="assets/lec_1/deepmind.png" class="w-1/2 mx-auto block">
                 </div>
                 <div><a class="text-sm" href="https://www.nature.com/articles/s41586-022-05172-4">Сравнение сложности
                         ранее известных алгоритмов умножения матриц с алгоритмами, открытыми DeepMind</a></div>
