--- a/dl_3.html
+++ b/dl_3.html
@@ -258,6 +258,17 @@
 
     </div>
 
+    <section>
+        <div style="text-align: center; margin-top: 50px;">
+            <h6 class="text-sm">
+                <a href="mailto:constantine.korikov@gmail.com"
+                    style="color: var(--link-color); text-decoration: none;">
+                    constantine.korikov@gmail.com
+                </a>
+            </h6>
+        </div>
+    </section>
+
     <script src="sys/reveal.js"></script>
     <script src="sys/plugin/math.js"></script>
     <script src="sys/plugin/markdown.js"></script>
@@ -265,73 +276,7 @@
     <script src="sys/plugin/search.js"></script>
     <script src="sys/plugin/zoom.js"></script>
     <script src="sys/browser@4.js"></script>
-    <script src="sys/rough.min.js"></script>
     <script src="sys/main.js"></script>
-
-    <script>
-        function renderMatrixIntro() {
-            const canvas = document.getElementById('rough-matrix-intro');
-            const rc = rough.canvas(canvas);
-            const ctx = canvas.getContext('2d');
-
-            const matrix = [
-                ['☠️', '💃'],
-                ['😅', '👨‍💻']
-            ];
-
-            drawMatrix(matrix, rc, ctx, 70);
-        }
-
-        function renderMatrixNumbers() {
-            const canvas = document.getElementById('rough-matrix-numbers');
-            const rc = rough.canvas(canvas);
-            const ctx = canvas.getContext('2d');
-
-            const matrix = [
-                [1, 2],
-                [3, 4]
-            ];
-
-            drawMatrix(matrix, rc, ctx, 70);
-        }
-
-        function renderMatMulScheme() {
-            const canvas = document.getElementById('rough-matmul-diagram');
-            const rc = rough.canvas(canvas);
-            const ctx = canvas.getContext('2d');
-
-            // Draw matrices in new order: C = A x B
-            rc.rectangle(350, 50, 100, 100, { stroke: 'black', strokeWidth: 2 });
-            rc.rectangle(50, 50, 100, 100, { stroke: 'black', strokeWidth: 2 });
-            rc.rectangle(200, 50, 100, 100, { stroke: 'black', strokeWidth: 2 });
-
-            // Labels
-            ctx.font = '20px IBM Plex Mono';
-            ctx.textAlign = 'center';
-            ctx.fillText('B', 400, 40);
-            ctx.fillText('C', 100, 40);
-            ctx.fillText('A', 250, 40);
-            ctx.fillText('=', 175, 100);
-            ctx.fillText('×', 325, 100);
-
-            // Highlight row and column
-            // Highlight row from A and column from B
-            ctx.fillStyle = 'rgba(255, 0, 0, 0.2)';
-            ctx.fillRect(200, 75, 100, 20); // Row in A
-            ctx.fillStyle = 'rgba(0, 0, 255, 0.2)';
-            ctx.fillRect(375, 50, 20, 100); // Column in B
-
-            // Highlight result cell in C
-            ctx.fillStyle = 'rgba(128, 0, 128, 0.3)';
-            ctx.fillRect(75, 75, 20, 20);
-        }
-
-        Reveal.on('ready', function () {
-            renderMatrixIntro();
-            renderMatrixNumbers();
-            renderMatMulScheme();
-        });
-    </script>
 </body>
 
 </html>
