fix(dl_3): add img titles + crop image

--- a/dl_3.html
+++ b/dl_3.html
@@ -217,6 +217,7 @@
                 <div class="flex justify-center">
                     <img src="assets/lec_5/dp.png" alt="data parallelism" class="mx-auto block w-1/2">
                 </div>
+                <p>Data-параллелизм</p>
             </section>
 
             <section class="text-xl">
@@ -224,6 +225,7 @@
                 <div class="flex justify-center">
                     <img src="assets/lec_5/mp.png" alt="model parallelism" class="mx-auto block w-1/2">
                 </div>
+                <p>Model-параллелизм</p>
             </section>
 
             <section class="text-xl">
@@ -231,6 +233,7 @@
                 <div class="flex justify-center">
                     <img src="assets/lec_5/pp.png" alt="pipeline parallelism" class="mx-auto block w-1/2">
                 </div>
+                <p>Pipeline-параллелизм</p>
             </section>
 
             <section class="text-xl">
