fix(dl_1): typo

--- a/dl_1.html
+++ b/dl_1.html
@@ -177,7 +177,7 @@
                 <ul>
                     <li>Полносвязный слой (Fully Connected Layer, или Dense Layer)</li>
                     <li>Свёрточный слой (Convolution Layer)</li>
-                    <li>Рекуррентный слой(RNN)</li>
+                    <li>Рекуррентный слой (RNN)</li>
                     <li>Нормализующий слой (Normalization Layer)</li>
                     <li>Слой подвыборки (Pooling Layer)</li>
                     <li>Слой внимания (Attention Layer)</li>
@@ -223,7 +223,7 @@
             </section>
 
             <section class="text-xl">
-                <h3>Полносвязная сеть для работы с изображениями.</h3>
+                <h3>Полносвязная сеть для работы с изображениями</h3>
                     <img src="assets/lec_3/ffn_image.png" style="width: 100%;display: block; margin: auto;">
                 <h3>Недостатки</h3>
                 <ul>
